samples/_failures_safe/1761187202_bf26c9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_943c953d.c: In function ‘main’:
./samples/SAFE/__tmp_943c953d.c:163:12: error: missing terminating " character
  163 |     printf("Enter start and
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_943c953d.c:163:5: error: expected expression at end of input
  163 |     printf("Enter start and
      |     ^~~~~~
./samples/SAFE/__tmp_943c953d.c:163:5: error: expected declaration or statement at end of input
